# Blockchain-Work

./: .gitmodules  README.md
Foundry-Work/example_project/script/: Counter.s.sol
Foundry-Work/example_project/test/: Counter.t.sol
Hardhat/: README.md  hardhat.config.js  package-lock.json  package.json
Hardhat/cache/: .hardhat-network-instances.json  console-history.txt  solidity-files-cache.json
Hardhat/contracts/: Token.sol
Hardhat/test/: Token.js  Token_ORIG.js
PolkaDot-Stuff/contract-storage/: .gitignore  Cargo.toml  e2e_tests.rs  lib.rs
PolkaDot-Stuff/foobar/: Cargo.toml
Smart-Contracts/: MyContract.sol  MyContractCounter.sol  MyContractCrowdFunding.sol  MyContractDonations.sol  MyContractNameRegistry.sol  MyContractStorage.sol  MyContractTimelock.sol  README.md
Solana-Trading-Bot/: .env  README.md  package-lock.json  package.json  script.js
blockchain-explorer/: README.md  package-lock.json  package.json
blockchain-explorer/app/: layout.js  page.js  style.css  token.json
dex-aggregator/: package-lock.json  package.json
foundation_block/: Cargo.toml  README.md  blockchain.rs
foundation_block/data/: db  snap.00000000000002FF
foundation_block/src/: block.rs  blockchain.rs  config.rs  lib.rs  main.rs  memory_pool.rs  node.rs  proof_of_work.rs  req_functions.rs  server.rs  transaction.rs  transactions.rs  utils.rs  utxoSet.rs  utxo_set.rs  wallets.rs
foundation_block/src/data/: db  snap.00000000000002FF
pumpfun-clone/: README.md
pumpfun-clone/src/: Token.sol  TokenFactory.sol
pumpfun-clone/test/: TokenFactory.t.sol
(+9 files in other folders)
